# levelup

./: README.md
backend/: auth.py  main.py  pyproject.toml  requirement.txt  requirements.txt  schemas.py
backend/src/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  App_backup.tsx  index.css  main.tsx  markdown.tsx
frontend/src/assets/: MoonIcon.tsx  SunIcon.tsx
frontend/src/components/: AdminPanel.tsx  BadgeProgress.tsx  ConfirmationModal.tsx  FileUpload.tsx  Leaderboard.tsx  PurchaseConfirmation.tsx  SellProductModal.tsx  UploadProgress.tsx  UserBadge.tsx  components.css
frontend/src/utils/: badges.ts
