[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = "LevelUp Backend API"
authors = ["Kia2009 <kkia.ghanati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.28.0"
supabase = "^2.17.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"